Version 0.4.7     unreleased

	* Add NOTICE file to sdist, alongside existing LICENSE file.

Version 0.4.6     09 Nov 2022

	* Support Python 3.11.
	* Convert to modern importlib-resources files() pattern to fix deprecation.

Version 0.4.5     24 Oct 2022

	* Refactor the run script and pre-commit hooks to reduce duplication.
	* Rework the GitHub Actions build process to pull out shared code.

Version 0.4.4     18 Oct 2022

	* Handle weather.gov errors with a simple logged error message.

Version 0.4.3     05 Sep 2022

	* Upgrade to Poetry v1.2.0 and make related build process changes.
	* Upgrade to Pylint v2.15.0 and address warnings.
	* Add dependency caching to GitHub Actions workflow.
	* Fix the GitHub Actions matrix build to properly target MacOS.
	* Update various dependencies for the developer environment.

Version 0.4.2     24 Jun 2022

	* Upgrade to smartapp-sdk v0.5.0.

Version 0.4.1     22 Jun 2022

	* Use InfluxDBClient.write_api(SYNCHRONOUS) so file handles are closed.
	* Remove cache for weather API and better handle bad data when received.

Version 0.4.0     19 Jun 2022

	* Rename GitHub repo to smartapp-sensortrack.
	* Remove cache for smartthings.retrieve_location().

Version 0.3.0     18 Jun 2022

	* Improvements/fixes to install process and documentation.

Version 0.2.0     18 Jun 2022

	* Add support for tracking current weather conditions in U.S.

Version 0.1.0     17 Jun 2022

	* Initial public release.
