@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+    tags:
+      - "v*"
   pull_request:
     branches:
       - master
@@ -14,9 +16,20 @@ concurrency:
   cancel-in-progress: true
 jobs:
   build-and-test:
-    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v2
+    name: "Linux"
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v3
     secrets: inherit
     with:
       matrix-os-version: "[ 'ubuntu-latest' ]"
       matrix-python-version: "[ '3.9', '3.10', '3.11' ]"
       poetry-version: "1.3.1"
+  release:
+    name: "Release"
+    if: github.ref_type == 'tag'
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-release.yml@v3
+    needs: [ linux-build-and-test ]
+    secrets: inherit
+    with:
+      python-version: "3.9"
+      poetry-version: "1.3.1"
+      publish-pypi: true
